fix: fixed score alignment

--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -82,6 +82,7 @@
 			flex-direction: column;
 			align-items: center;
 			justify-content: space-evenly;
+			height: calc(100% - 25px);
 			strong {
 				height: 50px;
 				display: flex;
